finish autograder for lab1

--- a/labs/Lab1/dist-lab1/student/Lab1_template.ipynb
+++ b/labs/Lab1/dist-lab1/student/Lab1_template.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21746b8a",
+   "id": "8b4a9400",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -33,7 +33,7 @@
     "\n",
     "## Overview\n",
     "In this lab, we will introduce the basics of machine learning in **Python** by focusing on **regression**, a core technique used to predict continuous outcomes. We will use the popular **scikit-learn** library, which provides easy-to-use tools for building and evaluating machine learning models.\n",
-    "Specifically, we will focus on how regression algorithms can help us model and predict abalone data.\n",
+    "Specifically, we will focus on how regression algorithms can help us model and predict water quality data.\n",
     "\n",
     "## Objectives\n",
     "By the end of this lab, you will be able to:\n",
@@ -75,10 +75,20 @@
    "source": [
     "#### About the data\n",
     "\n",
-    "- We will be working with data dealing with physical abalone features. This dataset has observations of more than 4,000 abalone, measuring their length, diameter, height, and different rings. The data can be found here : https://archive.ics.uci.edu/dataset/1/abalone. \n",
+    "- We will be working with data regarding water quality in the Hudson River during and after Hurricane Irene in 2011. This dataset contains obesrvations in 15 minute increments over a span of 10 days. Measurements observed includ rainfall, depth, turbidity, water temperature, and dissolved oxygen. The data come from the Cary Institute and can be found [here](https://docs.google.com/spreadsheets/d/1MsSf679OsQpt4y6btV3tLPf-i8_bdoTZ/edit?gid=511934884#gid=511934884). \n",
     "\n",
     "\n",
-    "- Notice that the data is not a csv file and is instead a .data file! The .data file does not contain any column names, so we therefore need to specify the column names when we read our data in using `pd.read_csv`. Look at the metadata and assign column names to the data. When you are finished, look at the head of the dataframe to ensure it looks correct. \n"
+    "- Notice that the data is not a csv file and is instead a .xlsx file! Use the `pandas.read_excel` function to read in your data. You can find more documentation on reading in .xlsx files [here](https://pandas.pydata.org/docs/reference/api/pandas.read_excel.html).\n",
+    "\n",
+    "- In this lab, we are interested in the turbidity and dissolved oxygen variables. Read the data into the `hurricane_do` and `hurricane_turbidity` variables. Then, merge these two dataframes. Store the result in the `df` variable. Drop the columns that contain data for Piedmont. We are only interested in the Port of Albany and Norrie Point. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56c13825-317d-4a03-8acd-79afa32e8c99",
+   "metadata": {},
+   "source": [
+    "#### Load libraries"
    ]
   },
   {
@@ -93,20 +103,51 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import sklearn.linear_model\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dfe1abc-c8f6-4ad6-b9e2-335bacb0deff",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "89f228b0-99d4-4900-9adf-ca6761b67940",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "hurricane_do = pd.read_csv('data/Hurricane_do_during.csv')\n",
-    "hurricane_turbidity = pd.read_csv('data/Hurricane_Irene _Turbidity.csv')\n",
-    "df = hurricane_do.merge(hurricane_turbidity, on = 'Date Time (ET)')\n",
-    "df.head()"
+    "hurricane_do = ...\n",
+    "hurricane_turbidity = ...\n",
+    "df = ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5069de3",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check(\"q1\")"
    ]
   },
   {
@@ -114,9 +155,9 @@
    "id": "e70a3f96-267d-4f9c-88fd-5e7011d0e307",
    "metadata": {},
    "source": [
-    "### Step 2: Explore the data\n",
+    "### Step 2: Explore  and clean the data\n",
     "\n",
-    "Do some initial exploratory analysis on the data. Check out what type of data you are working with, and create a few plots of your data. Do any combinations of predictor variables look very linear? Do any look exponential? Play around with different potential x and y variables. "
+    "Do some initial exploratory analysis on the data. Check out what type of data you are working with, and create a few plots of your data. Write a few sentences on your findings. "
    ]
   },
   {
@@ -143,6 +184,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "543b5386-9b1f-4730-a818-8f6efc1c6fca",
+   "metadata": {},
+   "source": [
+    "*Update this markdown cell with your findings.* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c5e859-39ca-4f92-8147-190ca61c5f6a",
+   "metadata": {},
+   "source": [
+    "When you were exploring the data, you may have noticed that the column names aren't the cleanest. Update the column names to the following : `date`, `albany_DO`, `norrie_DO`, `albany_turbidity`, `norrie_turbidity`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28f96e1-adb2-4aba-9194-7563c1eea328",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df # Check to make sure column names were updated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "677fce7e",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check(\"q2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "599506da-4fe1-4abd-8ec3-f69842cf93d7",
    "metadata": {},
    "source": [
@@ -154,19 +236,7 @@
    "id": "e7e8fa3c-a09d-4fac-ab66-4add0d6254a4",
    "metadata": {},
    "source": [
-    "It is time to split our data into training and testing data for our linear regression model. Split your training and testing data where `Shucked_weight` is your predictor variable and `Whole_weight` is you response variable. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "95ce69c7",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
-    "<!-- BEGIN QUESTION -->\n",
-    "\n"
+    "It is time to split our data into training and testing data for our linear regression model. Split your training and testing data where `albany_DO` is your predictor variable and `albany_turbidity` is you response variable. "
    ]
   },
   {
@@ -178,58 +248,35 @@
    },
    "outputs": [],
    "source": [
-    "# Prepare the Data for Machine Learning \n",
-    "# Preprocessing: handling missing values, feature scaling, splitting data into training/test \n",
-    "# train_test_split()\n",
-    "\n",
-    "\n",
     "# Select features and target\n",
     "X = ...\n",
     "Y = ...\n",
     "\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = ...\n",
-    "    X, Y, test_size= ..."
+    "X_train, X_test, Y_train, Y_test = ..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d72e8250-05a7-4644-a59a-6ecb893d3295",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04dcbddd",
+   "id": "187d2c74",
    "metadata": {
     "deletable": false,
     "editable": false
    },
    "outputs": [],
    "source": [
-    "grader.check(\"q1a\")"
+    "grader.check(\"q3\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "217f625b-c0bd-4475-b39f-168a51a48360",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
-    "<!-- END QUESTION -->\n",
-    "\n",
     "### Step 4: Select your model\n",
     "\n",
-    "We are going to use linear regression to predict the whole weight of oysters. Why is linear regression a good model to pick to achieve this goal? Answer in the markdown cell below."
+    "We are going to use linear regression to predict the whole weight of oysters. Is linear regression a good model to pick to achieve this goal? Answer in the markdown cell below."
    ]
   },
   {
@@ -244,16 +291,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "185639e3-9147-4aec-ad24-51975747be11",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Select and Train Model\n",
-    "# Import and create regression model using LinearRegression() from scikit-learn\n",
-    "# Train the model on training data with .fit()\n",
-    "\n",
-    "# Initialize and train the model\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, Y_train)"
+    "# Initialize and fit the model\n",
+    "model = ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7910556b",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check(\"q4\")"
    ]
   },
   {
@@ -272,31 +329,35 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7493853-80bf-428f-b41f-01f731592c25",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "#Evaluate the Model \n",
-    "#Predict target variable on the test set and calculate evaluation metrics using scikit-learn's mean_squared_error adn r2_score\n",
-    "#Visualize predictions vs. actual values\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "\n",
     "# Make predictions\n",
-    "Y_pred = model.predict(X_test)\n",
+    "Y_pred = ...\n",
     "\n",
-    "# Evaluate the model\n",
-    "mse = mean_squared_error(Y_test, Y_pred)\n",
-    "r2 = r2_score(Y_test, Y_pred)\n",
+    "# Calculate evaluation metrics using scikit-learn's mean_squared_error and r2_score\n",
+    "mse = ...\n",
+    "r2 = ...\n",
     "\n",
     "print(f\"Mean Squared Error: {mse}\")\n",
     "print(f\"R² Score: {r2}\")\n",
     "\n",
-    "# Plot predictions vs actual\n",
-    "plt.scatter(Y_test, Y_pred)\n",
-    "plt.xlabel('Actual')\n",
-    "plt.ylabel('Predicted')\n",
-    "plt.title('Actual vs Predicted')\n",
-    "plt.show()\n"
+    "#Visualize predictions vs. actual values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d04ac84f",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check(\"q5\")"
    ]
   },
   {
@@ -321,17 +382,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ff598e3e-e564-4518-8363-238e2091b7b3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "#Fine-tune the Model \n",
+    "\n",
     "#Use cross_val_score() to fine-tune the model\n",
-    "\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "# Perform cross-validation\n",
     "scores = cross_val_score(model, X_train, Y_train, cv=5, scoring='neg_mean_squared_error')\n",
     "print(f\"Cross-validation scores: {-scores}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b58147c8",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check(\"q6\")"
    ]
   },
   {
@@ -341,6 +413,14 @@
    "source": [
     "### Step 7:  Present the Solution\n",
     "In the markdown cell below, discuss how your model performed overall. If the model performed poorly, why do you think it did so? If it performed well, why do you think it did so? What could future analysis include? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7569a53a-a957-44f3-9ead-3b9d6a1ff867",
+   "metadata": {},
+   "source": [
+    "*Your answer here.*"
    ]
   },
   {
@@ -359,9 +439,9 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 6))  # Setting the figure size for better visibility\n",
-    "df.plot.scatter(x=' Port of Albany D.O. (ppm)', y=' Port of Albany Turbidity in NTU', c='DarkBlue')\n",
+    "df.plot.scatter(x='albany_DO', y='albany_turbidity', c='DarkBlue')\n",
     "\n",
-    "plt.title('Scatter Plot of Turbidity vs. Dissolved Oxygen at Port of Albany')\n",
+    "plt.title('Turbidity vs. Dissolved Oxygen at Port of Albany')\n",
     "plt.xlabel('Dissolved Oxygen (ppm)')\n",
     "plt.ylabel('Turbidity (NTU)')\n",
     "plt.grid(True)\n",
@@ -382,17 +462,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50961fc0-8274-4987-a17d-f202f832879d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Transform features for polynomial regression \n",
-    "\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "\n",
     "# Transform features to include polynomial terms (degree 2 for quadratic terms)\n",
-    "poly = PolynomialFeatures(degree=2)\n",
-    "X_poly_train = poly.fit_transform(X_train)\n",
-    "X_poly_test = poly.transform(X_test)\n",
+    "poly = ...\n",
+    "X_poly_train = ...\n",
+    "X_poly_test = ...\n",
     "\n",
     "# View the transformed feature set (for insight)\n",
     "print(X_poly_train)"
@@ -410,12 +488,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c76b90c2-99c0-4b6f-8257-34b7665b27b1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Train the model on polynomial features \n",
-    "poly_model = LinearRegression()\n",
-    "poly_model.fit(X_poly_train, Y_train)"
+    "poly_model = ..."
    ]
   },
   {
@@ -433,26 +512,35 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "05fdd437-19ff-4d8a-907b-0c227fb78f57",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Evaluate the polynomial regression model\n",
     "# Make predictions using the polynomial model\n",
-    "Y_poly_pred = poly_model.predict(X_poly_test)\n",
+    "Y_poly_pred = ...\n",
     "\n",
-    "# Evaluate the polynomial model\n",
-    "poly_mse = mean_squared_error(Y_test, Y_poly_pred)\n",
-    "poly_r2 = r2_score(Y_test, Y_poly_pred)\n",
+    "# Calculate evaluation metrics using scikit-learn's mean_squared_error and r2_score\n",
+    "poly_mse = ...\n",
+    "poly_r2 = ...\n",
     "\n",
     "print(f\"Polynomial Regression Mean Squared Error: {poly_mse}\")\n",
     "print(f\"Polynomial Regression R² Score: {poly_r2}\")\n",
     "\n",
-    "# Plot predictions vs actual\n",
-    "plt.scatter(Y_test, Y_poly_pred)\n",
-    "plt.xlabel('Actual')\n",
-    "plt.ylabel('Predicted')\n",
-    "plt.title('Polynomial Regression: Actual vs Predicted')\n",
-    "plt.show()"
+    "# Plot predictions vs actual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b4fa07a",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "grader.check(\"q10\")"
    ]
   },
   {
@@ -472,40 +560,6 @@
    "source": [
     "*Your answer here.*"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc28e3e5-d6c7-40af-92e2-dfb62883ec9a",
-   "metadata": {},
-   "source": [
-    "Notes: \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b438ee84-b0b9-4e0e-86d6-b22614ad77b9",
-   "metadata": {},
-   "source": [
-    "Ideas for discussion: \n",
-    "- multiple linear regression\n",
-    "- interpretation excercise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b641fc1-f637-4374-b663-3216fee46017",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c52ec9d2-6af5-41cc-97e9-4b36c39bf98d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
