--- a/index.qmd
+++ b/index.qmd
@@ -9,8 +9,6 @@ format:
 
 ![Image created using the Midjourney image generation tool](img/MLRobotLearnBanner.png)
 
-
-
 ## Course Description
 
 Machine learning is a field of inquiry devoted to understanding and building methods that "learn," that is, methods that leverage data to improve performance on some set of tasks. In this course, we focus on the core concepts of machine learning that beginning ML researchers must know. We cover "classical machine learning" primarily using R and explore applications to environmental science. To understand broader concepts of artificial intelligence or deep learning, a strong fundamental knowledge of machine learning is indispensable.
@@ -39,15 +37,15 @@ Machine learning is a field of inquiry devoted to understanding and building met
 
 The goal of EDS 232 is to equip students with a strong foundation in the core concepts of machine learning. By the end of the course, students should be able to:
 
--   Build machine learning models in Python using popular machine learning packages.
+-   Explain key machine learning concepts such as classification, regression, overfitting, and the trade-off in model complexity.
 
--   Build and train supervised machine learning models for prediction and binary classification tasks, including linear and logistic regression.
+-   Identify and justify appropriate data preprocessing techniques and integrate them into machine learning pipelines.
 
--   Apply best practices for machine learning development so that your models generalize to data and tasks in the real world.
+-   Demonstrate an intuitive understanding of common machine learning algorithms.
 
--   Build and use decision trees and tree ensemble methods, including random forests and boosted trees.
+-   Build supervised machine learning pipelines using Python and scikit-learn on real-world datasets.
 
--   Use unsupervised learning techniques including clustering.
+-   Apply best practices for machine learning development so that your models generalize to data and tasks in the real world. Measure and contrast the performance of various models
 
 ## Course Requirements
 
@@ -62,7 +60,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 ## Course Topics
 
 |             |            |                                                                |
-|-------------|-------------|---------------------------------------------|
+|---------------|---------------|------------------------------------------|
 | **Week \#** | **Dates**  | **Lecture**                                                    |
 | 1           | 1/7, 1/9   | Introduction, Linear Regression and ML Modeling Fundamentals I |
 | 2           | 1/14, 1/16 | Regularized Regression and ML Modeling Fundamentals II         |
