Update student notebook

--- a/labs/Lab1/Lab1_template.ipynb
+++ b/labs/Lab1/Lab1_template.ipynb
@@ -198,6 +198,25 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "c114c0b9-dffd-453a-9240-5bb5773a5ce3",
+   "metadata": {},
+   "source": [
+    "# BEGIN QUESTION\n",
+    "name: q2a\n",
+    "manual: true\n",
+    "points: 2"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "f0ffa1cb-03d8-4b30-9aa1-fb2e1bf189ed",
+   "metadata": {},
+   "source": [
+    "# BEGIN SOLUTION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "ec6f526e-9d22-4066-af21-a22f1482d045",
@@ -225,6 +244,7 @@
     }
    ],
    "source": [
+    "# BEGIN SOLUTION NO PROMPT\n",
     "# Explore and Visualize data \n",
     "# ex: scatterplot, correlation matrix\n",
     "df[' Port of Albany Turbidity in NTU'].hist()\n",
@@ -237,7 +257,25 @@
     "plt.title('Histogram of Dissolved Oxygen')\n",
     "plt.xlabel('Dissolved Oxygen (ppm)')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "26f7ab79-ecfd-41f4-9136-b10fd23ae789",
+   "metadata": {},
+   "source": [
+    "# END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a7cb60a9-d2cf-4d4c-8294-e4c2e02de395",
+   "metadata": {},
+   "source": [
+    "# END QUESTION"
    ]
   },
   {
@@ -1260,7 +1298,7 @@
    "source": [
     "\n",
     "#Use cross_val_score() to fine-tune the model\n",
-    "scores = cross_val_score(model, X_train, Y_train, cv=5, scoring='neg_mean_squared_error')\n",
+    "scores = cross_val_score(model, X_train, Y_train, cv=5, scoring='neg_mean_squared_error') # SOLUTION\n",
     "print(f\"Cross-validation scores: {-scores}\")\n"
    ]
   },
@@ -2068,7 +2106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
