--- a/labs/Lab1/dist-lab1/student/Lab1_template.ipynb
+++ b/labs/Lab1/dist-lab1/student/Lab1_template.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b4a9400",
+   "id": "7f2dcf1e",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -114,18 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dfe1abc-c8f6-4ad6-b9e2-335bacb0deff",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "89f228b0-99d4-4900-9adf-ca6761b67940",
    "metadata": {
     "tags": []
@@ -140,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5069de3",
+   "id": "989b9865",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -161,32 +149,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9676619",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "<!-- BEGIN QUESTION -->\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ec6f526e-9d22-4066-af21-a22f1482d045",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": [
-    "# Explore and Visualize data \n",
-    "# ex: scatterplot, correlation matrix\n",
-    "df[' Port of Albany Turbidity in NTU'].hist()\n",
-    "plt.title('Histogram of Turbidity')\n",
-    "plt.xlabel('Turbidity (NTU)')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.show()\n",
-    "\n",
-    "df[' Port of Albany D.O. (ppm)'].hist()\n",
-    "plt.title('Histogram of Dissolved Oxygen')\n",
-    "plt.xlabel('Dissolved Oxygen (ppm)')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "543b5386-9b1f-4730-a818-8f6efc1c6fca",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
     "*Update this markdown cell with your findings.* "
    ]
   },
@@ -213,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "677fce7e",
+   "id": "41119943",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -259,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187d2c74",
+   "id": "89a21cfa",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -303,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7910556b",
+   "id": "6c907c6f",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -350,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d04ac84f",
+   "id": "edc3acf9",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -389,14 +382,14 @@
    "source": [
     "\n",
     "#Use cross_val_score() to fine-tune the model\n",
-    "scores = cross_val_score(model, X_train, Y_train, cv=5, scoring='neg_mean_squared_error')\n",
+    "scores = ...\n",
     "print(f\"Cross-validation scores: {-scores}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b58147c8",
+   "id": "29cd8171",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -533,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b4fa07a",
+   "id": "cf26f33a",
    "metadata": {
     "deletable": false,
     "editable": false
