--- a/index.qmd
+++ b/index.qmd
@@ -75,7 +75,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+-------------------------------------------------------------------------+----------------+
 | 1           | 1/7, 1/9   | [Introduction](https://ucsb.box.com/s/maqfl2rorjjbekb23ek98b3odshuvcq2) | ISL Ch. 1, 2.1 |
 |             |            |                                                                         |                |
-|             |            | Linear Regression and ML Modeling Fundamentals I                        |                |
+|             |            | Linear Regression and ML Modeling Fundamentals I                        | ISL Ch. 6.2               |
 +-------------+------------+-------------------------------------------------------------------------+----------------+
 | 2           | 1/14, 1/16 | Regularized Regression and ML Modeling Fundamentals II                  |                |
 +-------------+------------+-------------------------------------------------------------------------+----------------+
