--- a/discussion/week1.qmd
+++ b/discussion/week1.qmd
@@ -10,9 +10,9 @@ jupyter:
       format_version: '1.0'
       jupytext_version: 1.16.4
   kernelspec:
-    display_name: Python (ml-env)
+    display_name: Python (eds232_env)
     language: python
-    name: ml-env
+    name: eds232_env
 ---
 
 # Introduction
