--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ jupyter:
   kernelspec:
     display_name: ML Environment
     language: python
-    name: ml-env
+    name: eds232_env
 ---
 
 ![Image created using the Midjourney image generation tool](img/MLRobotLearnBanner.png)
