Add week 2 discussion to website

--- a/discussion/week1.qmd
+++ b/discussion/week1.qmd
@@ -10,7 +10,7 @@ jupyter:
       format_version: '1.0'
       jupytext_version: 1.16.4
   kernelspec:
-    display_name: Python (ml-env)
+    display_name: ML Environment
     language: python
     name: ml-env
 ---
