--- a/labs/lab_instructions.qmd
+++ b/labs/lab_instructions.qmd
@@ -8,7 +8,7 @@ jupyter:
       format_version: '1.0'
       jupytext_version: 1.16.4
   kernelspec:
-    display_name: Python (eds232_env)
+    display_name: EDS 232 Environment
     language: python
     name: eds232_env
 ---
