--- a/index.qmd
+++ b/index.qmd
@@ -77,7 +77,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 |             |            |                                                                                                             |                          |
 |             |            | [Linear Regression and ML Modeling Fundamentals I](https://ucsb.box.com/s/3krktrjmagi8sbo3mwg2t4rc57qtu100) |                          |
 +-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 2           | 1/14, 1/16 | [Regularized Regression and ML Modeling Fundamentals](https://ucsb.app.box.com/file/1749137689494?s=rbdkrkiue88ggqeutgua1xzeh44lj5aw) II                                                      | ISL Ch. 5.1.1-5.1.4, 6.2 |
+| 2           | 1/14, 1/16 | [Regularized Regression and ML Modeling Fundamentals II](https://ucsb.app.box.com/file/1749137689494?s=rbdkrkiue88ggqeutgua1xzeh44lj5aw)                                                       | ISL Ch. 5.1.1-5.1.4, 6.2 |
 +-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
 | 3           | 1/21, 1/23 | Logistic Regression, Classification                                                                         |                          |
 +-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
